--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "js-test",
+  "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "protractor": "5.3.1"
+    "protractor": "^5.3.1"
   }
 }
